--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -286,7 +286,7 @@
                   <br />
 
                   <% if (electionConfig.colleges && electionConfig.colleges.length > 0) { %>
-                    <p><b>List of Colleges and Their Number of Voters (Students):</b></p>
+                    <p><b>List of Colleges and Their Number of Students (Voters):</b></p>
                     <br />
                     <ol class="election-configuration">
                       <% 
