--- a/views/admin/election-voter-turnout.ejs
+++ b/views/admin/election-voter-turnout.ejs
@@ -34,9 +34,9 @@
             <i class="fa fa-pie-chart" aria-hidden="true"></i>
             <h1 class="title">Voter Turnout</h1>
           </div>
-           <div class="main-header-options printer">
+           <!-- <div class="main-header-options printer">
             <img src="../img/printer.png" class="option-print" />
-          </div>
+          </div> -->
 
         </div>
         <hr class="title-line" />
