--- a/views/admin/admin-login.ejs
+++ b/views/admin/admin-login.ejs
@@ -51,7 +51,8 @@
             </span>
             </div>
             <div class="field">
-              <p>Enter the Code Sent to Your Email:</p>
+              <%- include('../partials/svg-otp') %>
+              <!-- <p class="enter-the-code">6-digit OTP:</p> -->
               <input type="text" id="otp-code" placeholder="Enter OTP code..." class="input-field" name="otp" disabled required />
             </div>
             
