--- a/views/admin/blockchain-management.ejs
+++ b/views/admin/blockchain-management.ejs
@@ -128,6 +128,7 @@
                 <h2><span><i class="fa-solid fa-wallet"></i></span> Admin Wallet Information</h2>
                 <br />
                 <!-- Wallet Address -->
+                <% if (loggedInAdmin.role === "Developer" || loggedInAdmin.role === "Electoral Board Member" || loggedInAdmin.role === "Technical Team Member") { %>
                 <div class="indent">
                   <ul>
                     <li>
@@ -194,12 +195,16 @@
                     </li> -->
                   </ul>
                 </div>
+                <% } else { %>
+                  <p class="error-message">You do not have permission to view this information.</p>
+                  <% } %>
 
               </div>
 
               <div class="right">
                 <h2><i class="fa fa-link"></i> Blockchain Transactions (Current Election)</h2>
                 <br />
+                <% if (loggedInAdmin.role === "Developer" || loggedInAdmin.role === "Electoral Board Member" || loggedInAdmin.role === "Technical Team Member") { %>
                 <div class="indent">
                   <ul>
                     <li>
@@ -312,6 +317,9 @@
                     <br />
                   </ul>
                 </div>
+                <% } else { %>
+                  <p class="error-message">You do not have permission to view this information.</p>
+                  <% } %>
               </div>
               
               
@@ -325,6 +333,7 @@
           <div class="total box-shadow">
             <span class="middle"><h2>All Blockchain Transactions</h2></span>
             <br />
+            <% if (loggedInAdmin.role === "Developer" || loggedInAdmin.role === "Electoral Board Member" || loggedInAdmin.role === "Technical Team Member") { %>
             <div class="indent">
               <ul>
                 <li>
@@ -388,6 +397,7 @@
                 </li>
               </ul>
             </div>
+            
           
             <br />
             <table class="currency total-currency">
@@ -424,6 +434,9 @@
                 </span>
               </p>
             </div>
+            <% } else { %>
+              <p class="error-message" style="text-align: center;">You do not have permission to view this information.</p>
+              <% } %>
           </div>
           
         </div>
