--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -374,174 +374,184 @@
                 </div>
               
                 <div class="form" id="blockchain-dashboard">
-                  <%
-                  // Compute Average Candidate Submission Cost per Unit
-                  let avgCandidateCostPOL = 0, avgCandidateCostUSD = 0, avgCandidateCostPHP = 0;
-                  if (blockchainMgmt && blockchainMgmt.candidateSubmissionsCount > 0) {
-                    avgCandidateCostPOL = blockchainMgmt.totalAmountSpentInCandidatesPol / blockchainMgmt.candidateSubmissionsCount;
-                    avgCandidateCostUSD = blockchainMgmt.totalAmountSpentInCandidatesUSD / blockchainMgmt.candidateSubmissionsCount;
-                    avgCandidateCostPHP = blockchainMgmt.totalAmountSpentInCandidatesPHP / blockchainMgmt.candidateSubmissionsCount;
-                  }
+  <%
+  // Compute Average Candidate Submission Cost per Unit
+  let avgCandidateCostPOL = 0, avgCandidateCostUSD = 0, avgCandidateCostPHP = 0;
+  if (blockchainMgmt && blockchainMgmt.SubmitCandidatesCount > 0) {
+    avgCandidateCostPOL = blockchainMgmt.totalCostInPol / blockchainMgmt.SubmitCandidatesCount;
+    avgCandidateCostUSD = blockchainMgmt.totalCostInUSD / blockchainMgmt.SubmitCandidatesCount;
+    avgCandidateCostPHP = blockchainMgmt.totalCostInPHP / blockchainMgmt.SubmitCandidatesCount;
+  }
 
-                  // Compute Live Vote Transaction Estimate per Unit
-                  let liveVoteEstimatePOL = 0, liveVoteEstimateUSD = 0, liveVoteEstimatePHP = 0;
-                  if (blockchainMgmt && blockchainMgmt.voteTransactionsCount > 0) {
-                    liveVoteEstimatePOL = blockchainMgmt.totalAmountSpentPol / blockchainMgmt.voteTransactionsCount;
-                    liveVoteEstimateUSD = blockchainMgmt.totalAmountSpentUSD / blockchainMgmt.voteTransactionsCount;
-                    liveVoteEstimatePHP = blockchainMgmt.totalAmountSpentPHP / blockchainMgmt.voteTransactionsCount;
-                  }
+  // Compute Live Vote Transaction Estimate per Unit
+  let liveVoteEstimatePOL = 0, liveVoteEstimateUSD = 0, liveVoteEstimatePHP = 0;
+  if (blockchainMgmt && blockchainMgmt.voteCount > 0) {
+    liveVoteEstimatePOL = blockchainMgmt.currentElectionVoteCostInPol / blockchainMgmt.voteCount;
+    liveVoteEstimateUSD = blockchainMgmt.currentElectionVoteCostInUSD / blockchainMgmt.voteCount;
+    liveVoteEstimatePHP = blockchainMgmt.currentElectionVoteCostInPHP / blockchainMgmt.voteCount;
+  } else if (blockchainMgmt) {
+    // fallback when no votes yet
+    liveVoteEstimatePOL = blockchainMgmt.latestVoteCostInPol || 0;
+    liveVoteEstimateUSD = blockchainMgmt.latestVoteCostInUSD || 0;
+    liveVoteEstimatePHP = blockchainMgmt.latestVoteCostInPHP || 0;
+  }
 
-                  // Compute Live Recommended Fund Estimate using the new formula:
-                  // (avgCandidateCost * 3) + (registered voters * liveVoteEstimate)
-                  let recommendedFundPOL = 0, recommendedFundUSD = 0, recommendedFundPHP = 0;
-                  if (electionConfig && blockchainMgmt) {
-                    recommendedFundPOL = (avgCandidateCostPOL * 3) + (electionConfig.totalRegisteredNotVoted * liveVoteEstimatePOL);
-                    recommendedFundUSD = (avgCandidateCostUSD * 3) + (electionConfig.totalRegisteredNotVoted * liveVoteEstimateUSD);
-                    recommendedFundPHP = (avgCandidateCostPHP * 3) + (electionConfig.totalRegisteredNotVoted * liveVoteEstimatePHP);
-                  }
+  // Compute Live Recommended Fund Estimate using the new formula:
+  // (avgCandidateCost * 3) + (registered voters * liveVoteEstimate)
+  let recommendedFundPOL = 0, recommendedFundUSD = 0, recommendedFundPHP = 0;
+  if (electionConfig && blockchainMgmt) {
+    recommendedFundPOL = (avgCandidateCostPOL * 3)
+                       + (electionConfig.totalRegisteredNotVoted * liveVoteEstimatePOL);
+    recommendedFundUSD = (avgCandidateCostUSD * 3)
+                       + (electionConfig.totalRegisteredNotVoted * liveVoteEstimateUSD);
+    recommendedFundPHP = (avgCandidateCostPHP * 3)
+                       + (electionConfig.totalRegisteredNotVoted * liveVoteEstimatePHP);
+  }
 
-                  // Determine the current balance status based on walletInfo.balancePOL relative to recommendedFundPOL.
-                  let balanceStatus = "";
-                  let balanceDescription = "";
-                  if (walletInfo) {
-                    if (walletInfo.balancePOL > recommendedFundPOL * 1.5) {
-                      balanceStatus = "Excellent";
-                       balanceStatusClass = "balance-excellent";
-                      balanceDescription = "The admin wallet balance is well above the recommended fund estimate. You have more than enough funds to execute the blockchain voting operation confidently.";
-                    } else if (walletInfo.balancePOL >= recommendedFundPOL) {
-                      balanceStatus = "Good";
-                       balanceStatusClass = "balance-good";
-                      balanceDescription = "The admin wallet balance matches the recommended fund estimate. You are in a stable position to proceed with the blockchain voting operation.";
-                    } else {
-                      balanceStatus = "Warning";
-                        balanceStatusClass = "balance-warning";
-                      balanceDescription = "The admin wallet balance is below the recommended fund estimate. Consider adding more funds to avoid potential issues during the blockchain voting operation.";
-                    }
-                  }
-                %>
-                  <h4 class="center box-label purple pre-med2"><b>Admin Wallet Information</b></h4>
-                
-                    
-                     <br />
-                        <p>
-                          <b>Wallet Address:</b>
-                          <%= walletInfo ? walletInfo.address : "N/A" %>
-                        </p>
-                      
-                      <br />
-                      
-                        <p>
-                          <b>Current Balance:</b>
-                          <span class="<%= balanceStatusClass %>"><b><%= balanceStatus %></b></span>
-                        </p>
-                        <p class="small-text <%= balanceStatusClass %>"><em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<%= balanceDescription %></em></p>
-                      
-                      <br />
-                      <table class="currency">
-                        <tr>
-                          <th>Polygon (POL)</th>
-                          <th>United States Dollar (USD)</th>
-                          <th>Philippine Peso (PHP)</th>
-                        </tr>
-                        <tr>
-                          <td><%= walletInfo ? walletInfo.balancePOL.toFixed(4) : "N/A" %> POL</td>
-                          <td><%= walletInfo && walletInfo.balanceUSD ? walletInfo.balanceUSD.toFixed(2) : "N/A" %> USD</td>
-                          <td><span class="highlight"><%= walletInfo && walletInfo.balancePHP ? walletInfo.balancePHP.toFixed(2) : "N/A" %> PHP</span></td>
-                        </tr>
-                      </table>
-                      <br />
+  // Determine the current balance status based on walletInfo.balancePOL relative to recommendedFundPOL.
+  let balanceStatus = "";
+  let balanceDescription = "";
+  if (walletInfo) {
+    if (walletInfo.balancePOL > recommendedFundPOL * 1.5) {
+      balanceStatus = "Excellent";
+      balanceStatusClass = "balance-excellent";
+      balanceDescription = "The admin wallet balance is well above the recommended fund estimate. You have more than enough funds to execute the blockchain voting operation confidently.";
+    } else if (walletInfo.balancePOL >= recommendedFundPOL) {
+      balanceStatus = "Good";
+      balanceStatusClass = "balance-good";
+      balanceDescription = "The admin wallet balance matches the recommended fund estimate. You are in a stable position to proceed with the blockchain voting operation.";
+    } else {
+      balanceStatus = "Warning";
+      balanceStatusClass = "balance-warning";
+      balanceDescription = "The admin wallet balance is below the recommended fund estimate. Consider adding more funds to avoid potential issues during the blockchain voting operation.";
+    }
+  }
+  %>
+  <h4 class="center box-label purple pre-med2"><b>Admin Wallet Information</b></h4>
+  
+      
+       <br />
+          <p>
+            <b>Wallet Address:</b>
+            <%= walletInfo ? walletInfo.address : "N/A" %>
+          </p>
+        
+        <br />
+        
+          <p>
+            <b>Current Balance:</b>
+            <span class="<%= balanceStatusClass %>"><b><%= balanceStatus %></b></span>
+          </p>
+          <p class="small-text <%= balanceStatusClass %>"><em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<%= balanceDescription %></em></p>
+        
+        <br />
+        <table class="currency">
+          <tr>
+            <th>Polygon (POL)</th>
+            <th>United States Dollar (USD)</th>
+            <th>Philippine Peso (PHP)</th>
+          </tr>
+          <tr>
+            <td><%= walletInfo ? walletInfo.balancePOL.toFixed(4) : "N/A" %> POL</td>
+            <td><%= walletInfo && walletInfo.balanceUSD ? walletInfo.balanceUSD.toFixed(2) : "N/A" %> USD</td>
+            <td><span class="highlight"><%= walletInfo && walletInfo.balancePHP ? walletInfo.balancePHP.toFixed(2) : "N/A" %> PHP</span></td>
+          </tr>
+        </table>
+        <br />
 
-                     
-                      <p>
-                        <strong>Live Fee Estimate per Vote Transaction:</strong>
-                        <span>
-                          <%= (blockchainMgmt && (blockchainMgmt.voteTransactionsCount > 0 || blockchainMgmt.candidateSubmissionsCount > 0)) ? liveVoteEstimatePOL.toFixed(4) : "0" %> POL |
-                          <%= (blockchainMgmt && (blockchainMgmt.voteTransactionsCount > 0 || blockchainMgmt.candidateSubmissionsCount > 0)) ? liveVoteEstimateUSD.toFixed(2) : "0" %> USD |
-                         <span class="sub-highlight"> <%= (blockchainMgmt && (blockchainMgmt.voteTransactionsCount > 0 || blockchainMgmt.candidateSubmissionsCount > 0)) ? liveVoteEstimatePHP.toFixed(2) : "0" %> PHP</span>
-                        </span>
-                      </p>
-                 
-                    <br />
-                   
-                    <p>
-                        <strong>Live Recommended Fund Estimate:</strong>
-                        <span>
-                          <%= (blockchainMgmt && electionConfig && (blockchainMgmt.voteTransactionsCount > 0 || blockchainMgmt.candidateSubmissionsCount > 0)) ? recommendedFundPOL.toFixed(4) : "0" %> POL |
-                          <%= (blockchainMgmt && electionConfig && (blockchainMgmt.voteTransactionsCount > 0 || blockchainMgmt.candidateSubmissionsCount > 0)) ? recommendedFundUSD.toFixed(2) : "0" %> USD |
-                          <span class="highlight"><%= (blockchainMgmt && electionConfig && (blockchainMgmt.voteTransactionsCount > 0 || blockchainMgmt.candidateSubmissionsCount > 0)) ? recommendedFundPHP.toFixed(2) : "0" %> PHP</span>
-                        </span>
-                      </p>
-                    <br />
-                     
-                        
-                     
-                  
-                  <hr />
-                  <br />
-                  <h4 class="center grow purple large"><b>Blockchain Transactions</b></h4>
-                 
-                    <br />
-                    <p>
-                        <strong>Candidate Submission Count: </strong>
-                        <span><%= blockchainMgmt ? blockchainMgmt.candidateSubmissionsCount : "N/A" %></span>
-                      </p>
-                      <br />
-                     
-                        <p>
-                          <b>Vote Transactions Count: </b>
-                          <span><%= blockchainMgmt ? blockchainMgmt.voteTransactionsCount : "N/A" %></span>
-                        </p>
-                      
-                      <br />
-                     
-                         <p>
-                          <b>Total Blockchain Transactions: </b>
-                          <span>
-                            <%= blockchainMgmt ? (blockchainMgmt.voteTransactionsCount + blockchainMgmt.candidateSubmissionsCount) : "N/A" %>
-                          </span>
-                        </p> 
-                       <!-- <div class="indent-ish"> -->
-                          <!-- <p>
-                            <strong>Total Gas Used:</strong>
-                            <%= blockchainMgmt ? blockchainMgmt.totalGasUsed + blockchainMgmt.totalGasUsedInCandidates : "N/A" %> Gas
-                          </p>
-                          <p>
-                            <strong>Total Amount Spent (Wei):</strong>
-                          <%= blockchainMgmt ? blockchainMgmt.totalWeiSpent + blockchainMgmt.totalWeiSpentInCandidates : "N/A" %> Wei
-                          </p> -->
-                          <br />
-                          <p><b>Total Amount Spent:</b></p>
-                       <!-- </div> -->
-                      
-                      <br />
-                      <table class="currency">
-                      <tr>
-                        <th>Polygon (POL)</th>
-                        <th>United States Dollar (USD)</th>
-                        <th>Philippine Peso (PHP)</th>
-                      </tr>
-                      <tr>
-                        <td>
-                          <%= blockchainMgmt && blockchainMgmt.totalAmountSpentPol !== undefined && blockchainMgmt.totalAmountSpentInCandidatesPol !== undefined
-                            ? (blockchainMgmt.totalAmountSpentPol + blockchainMgmt.totalAmountSpentInCandidatesPol).toFixed(6)
-                            : "N/A" %> POL
-                        </td>
-                        <td>
-                          <%= blockchainMgmt && blockchainMgmt.totalAmountSpentUSD !== undefined && blockchainMgmt.totalAmountSpentInCandidatesUSD !== undefined
-                            ? (blockchainMgmt.totalAmountSpentUSD + blockchainMgmt.totalAmountSpentInCandidatesUSD).toFixed(2)
-                            : "N/A" %> USD
-                        </td>
-                        <td>
-                          <span class="highlight"><%= blockchainMgmt && blockchainMgmt.totalAmountSpentPHP !== undefined && blockchainMgmt.totalAmountSpentInCandidatesPHP !== undefined
-                            ? (blockchainMgmt.totalAmountSpentPHP + blockchainMgmt.totalAmountSpentInCandidatesPHP).toFixed(2)
-                            : "N/A" %> PHP </span>
-                        </td>
-                      </tr>
-                    </table>  
-                      <br />
-                   
-                 
-                </div>
+       
+        <p>
+          <strong>Live Fee Estimate per Vote Transaction:</strong>
+          <span>
+            <%= liveVoteEstimatePOL.toFixed(4) %> POL |
+            <%= liveVoteEstimateUSD.toFixed(2) %> USD |
+           <span class="sub-highlight"> <%= liveVoteEstimatePHP.toFixed(2) %> PHP</span>
+          </span>
+        </p>
+   
+      <br />
+     
+      <p>
+          <strong>Live Recommended Fund Estimate:</strong>
+          <span>
+            <%= recommendedFundPOL.toFixed(4) %> POL |
+            <%= recommendedFundUSD.toFixed(2) %> USD |
+            <span class="highlight"><%= recommendedFundPHP.toFixed(2) %> PHP</span>
+          </span>
+        </p>
+      <br />
+       
+          
+       
+    
+
+  <hr />
+  <br />
+  <h4 class="center grow purple large"><b>Blockchain Transactions</b></h4>
+ 
+    <br />
+    <p>
+        <strong>Candidate Submission Count: </strong>
+        <span><%= blockchainMgmt ? blockchainMgmt.SubmitCandidatesCount : "N/A" %></span>
+      </p>
+      <br />
+     
+        <p>
+          <b>Vote Transactions Count: </b>
+          <span><%= blockchainMgmt ? blockchainMgmt.voteCount : "N/A" %></span>
+        </p>
+      
+      <br />
+     
+         <p>
+          <b>Total Blockchain Transactions: </b>
+          <span>
+            <%= blockchainMgmt ? (blockchainMgmt.voteCount + blockchainMgmt.SubmitCandidatesCount) : "N/A" %>
+          </span>
+        </p> 
+       <!-- <div class="indent-ish"> -->
+          <!-- <p>
+            <strong>Total Gas Used:</strong>
+            <%= blockchainMgmt ? blockchainMgmt.totalCostInGas : "N/A" %> Gas
+          </p>
+          <p>
+            <strong>Total Amount Spent (Wei):</strong>
+          <%= blockchainMgmt ? blockchainMgmt.totalCostInWei : "N/A" %> Wei
+          </p> -->
+          <br />
+          <p><b>Total Amount Spent:</b></p>
+       <!-- </div> -->
+      
+      <br />
+      <table class="currency">
+      <tr>
+        <th>Polygon (POL)</th>
+        <th>United States Dollar (USD)</th>
+        <th>Philippine Peso (PHP)</th>
+      </tr>
+      <tr>
+        <td>
+          <%= blockchainMgmt && blockchainMgmt.totalCostInPol !== undefined
+            ? blockchainMgmt.totalCostInPol.toFixed(6)
+            : "N/A" %> POL
+        </td>
+        <td>
+          <%= blockchainMgmt && blockchainMgmt.totalCostInUSD !== undefined
+            ? blockchainMgmt.totalCostInUSD.toFixed(2)
+            : "N/A" %> USD
+        </td>
+        <td>
+          <span class="highlight"><%= blockchainMgmt && blockchainMgmt.totalCostInPHP !== undefined
+            ? blockchainMgmt.totalCostInPHP.toFixed(2)
+            : "N/A" %> PHP </span>
+        </td>
+      </tr>
+    </table>  
+      <br />
+   
+ 
+</div>
+
               </div>
               
               
